# PLZKSNARK

./: Cargo.toml  dot0.md
.github/workflows/: rust.yml  rustv2.yml
benches/: bench.rs
src/: lib.rs  light_node.rs  merkle_tree.rs  state_transition_circuit.rs  zksnark.rs
tests/: integration_tests.rs
